<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/snd_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/snd_message_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/secret_message" />

    <Button
        android:id="@+id/snd_image_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/snd_message_btn"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="41dp"
        android:enabled="false"
        android:text="@string/carrie_image" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/snd_image_btn"
        android:layout_alignBottom="@+id/snd_image_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:checked="false"
        android:enabled="true"
        android:text="@string/use_steganography" />

    <Button
        android:id="@+id/snd_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/output_file" />

    <Button
        android:id="@+id/snd_execute_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/snd_out_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/execute" />


</RelativeLayout>