<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rcv_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/rcv_mesg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/select_received_file" />

    <Button
        android:id="@+id/rcv_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rcv_mesg_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/output_directory" />

    <Button
        android:id="@+id/rcv_execute_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rcv_out_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:text="@string/execute" />
</RelativeLayout>